force-app/main/default/objects/Form_Builder__WorkFlow__c/Form_Builder__WorkFlow__c.object-meta.xml
<CustomObject>
    <label>WorkFlow</label>
    <nameField>
        <label>Work Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkFlows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>