force-app/main/default/objects/Form_Builder__WorkFlow__c/fields/Form_Builder__IsPreview__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__IsPreview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPreview</label>
    <type>Checkbox</type>
</CustomField>