force-app/main/default/objects/Form_Builder__WorkFlow__c/fields/Form_Builder__Start_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Start_Object_Type__c</fullName>
    <label>Start Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>