force-app/main/default/objects/Form_Builder__WorkFlow__c/fields/Form_Builder__Workflow_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Workflow_ID__c</fullName>
    <label>Workflow ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>